# EigenPCA

./: .gitignore  CMakeLists.txt  README.md  pca.cpp  pca_run.cpp
Debug/: CMakeLists.txt
Debug/include/: pca.hpp
Debug/src/: pca.cpp
Release/: CMakeLists.txt
Release/include/: pca.hpp
Release/src/: pca.cpp
Tests/: 02-out-03.txt  03-out-01.txt  03-out-04.txt  04-out-03.txt  04-out-04.txt  05-out-01.txt  06-out-01.txt  06-out-02.txt  07-out-03.txt  08-out-01.txt  08-out-03.txt  08-out-04.txt  09-out-04.txt  10-out-01.txt
src/: pca.cpp
test/data/: 02-out-01.txt  02-out-02.txt  03-out-02.txt  03-out-03.txt  04-out-01.txt  04-out-02.txt  05-out-02.txt  05-out-04.txt  06-out-04.txt  07-out-01.txt  07-out-02.txt  07-out-04.txt  08-out-02.txt  09-out-01.txt  10-out-03.txt
